--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,34 @@
- - name: FTP Deploy
-  # You may pin to the exact commit or the version.
-  # uses: SamKirkland/FTP-Deploy-Action@8a24039354ee91000cb948cb4a1dbdf1a1b94a3c
-   uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-    with:
-    # ftp server
-    server: ftpupload.net
-    # ftp username
-    username: epiz_33950208
-    # ftp password
-    password: ${{ secrets.ftp_password }}    \
-    # Server port to connect to (read your web hosts docs)
-    port: 21
-    # protocol to deploy with - ftp, ftps, or ftps-legacy
-    protocol: ftp
-    # Folder to upload from, must end with trailing slash /
-    local-dir: htdocs/
-    # Path to upload to on the server. Must end with trailing slash /
-    server-dir: htdocs/
-    # Path and name ofthe state file - this file is used to track which files have been deployed
-    state-name: # optional
-    # Prints which modifications will be made with current config options, but doesnt actually make any changes
-    dry-run: # optional
-    # Deletes ALL contents of server-dir, even items in excluded with exclude argument
-    dangerous-clean-slate: # optional
-    # An array of glob patterns, these files will not be included in the publish/delete process
-    exclude: # optional
-    # How verbose should the information be - minimal, standard, or verbose
-    log-level: # optional
-    # strict or loose
-    security: # optional
-    # Timeout in milliseconds for FTP operations
-    timeout: # optional
+# Workflow name
+name: Deploy site to live
+ 
+on:
+  # Run automatically on push to main branch
+  push:
+    branches: [ main ]
+    paths:
+    - 'src/**'
+  # Allow manual trigger
+  workflow_dispatch:
+
+jobs:
+  web-deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Get files
+      uses: actions/checkout@v2.3.4
+      
+    - name: FTP Deploy
+      uses: cinderblockgames/ftp-action@v1.2.2
+      with:
+        # required
+        server: ftpupload.net
+        username: epiz_33950208
+        password: ${{ secrets.FTP_PASSWORD }}
+        # optional
+        port: 22
+        source: src/path
+        destination: target/path
+        skipUnchanged: true
+        skipDirectories: .github|.well-known|configs|private-keys
+        test: true
